[project]
name = "obs-garmin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey04", email = "mycyberpet@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bleak>=1.1.1",
    "obsws-python>=1.8.0",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "typer>=0.20.0",
]

[project.scripts]
obs-garmin = "obs_garmin:app"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
